bump to jdk 8 and libraries upgrades
- mockito-core
- spring