@@ -3,13 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.pm.tools.quartz</groupId>
     <artifactId>reload-quartz</artifactId>
-    <!--<packaging>war</packaging>-->
     <packaging>jar</packaging>
     <version>0.0.1e</version>
     <name>reload-quartz</name>
     <url>none</url>
     <properties>
-        <spring.version>4.1.1.RELEASE</spring.version>
+        <java.version>8</java.version>
+        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.release>8</maven.compiler.release>
+
+        <spring.version>[5.2.22.RELEASE,)</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j.reload.repoToken>${project.repoToken}</log4j.reload.repoToken>
     </properties>
@@ -25,6 +29,7 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--
@@ -46,6 +51,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jcl</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -82,9 +93,10 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.10.8</version>
+            <version>4.6.1</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <build>
         <finalName>quartz-reloader</finalName>
@@ -92,9 +104,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <forkCount>0</forkCount>
+                    <argLine>
+                        --add-modules ALL-SYSTEM
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>8</release>
                 </configuration>
             </plugin>
             <plugin>
